Use keycloakProperties